<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    tools:openDrawer="start"
    android:background="@color/lightblack"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"
            app:titleTextColor="#fff"
            android:background="@color/lightblack"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/keypad">

        <TextView
            android:id="@+id/calculation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="bottom|right"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textColor="#fff"
            android:textSize="45sp"
            tools:ignore="RtlHardcoded" />

        <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="bottom|right"
        android:hint="@string/ans"
        android:padding="10dp"
            android:textColorHint="#989595"
            android:textColor="#989595"
        android:scrollbars="horizontal"
        android:textSize="30sp"
        tools:ignore="RtlHardcoded"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/keypad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            >

            <Button
                android:id="@+id/btn_clear"
                android:onClick="onClickClear"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/c"

                android:backgroundTint="#F7EAEA"
                android:textColor="#FF0303"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/btn_plus_or_minus"
                android:onClick="onSignChangeClick"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/plus_or_minus"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/btn_modulo"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="onModuloClick"
                android:text="@string/percentage"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/btn_division"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="#FEF4FE"
                android:textColor="#F967F3"
                android:background="@drawable/button_bg"
                android:onClick="onClickOperator"
                android:paddingVertical="20dp"
                android:text="@string/division"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp">

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumber"
                android:text="@string/seven"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumber"
                android:text="@string/eight"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumber"
                android:text="@string/nine"
                android:textSize="@dimen/textSize"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/btn_multiplication"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="#F967F3"
                android:layout_weight="1"
                android:backgroundTint="#FEF4FE"
                android:onClick="onClickOperator"
                android:text="@string/multiplication"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="20sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp">

            <Button
                android:id="@+id/btn_four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumber"
                android:text="@string/four"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/btn_five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumber"
                android:text="@string/five"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/btn_six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumber"
                android:text="@string/six"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickOperator"
                android:text="@string/minus"
                android:textColor="#F967F3"
                android:backgroundTint="#FEF4FE"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumber"
                android:text="@string/one"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumber"
                android:text="@string/two"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumber"
                android:text="@string/three"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickOperator"
                android:text="@string/plus"
                android:textColor="#F967F3"
                android:backgroundTint="#FEF4FE"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp">

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onDotClick"
                android:text="@string/dot"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumber"
                android:text="@string/zero"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete"
                android:onClick="onDeleteClick"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle"
                />
            <Button
                android:id="@+id/btn_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onEqualClick"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="#4AEBC4"
                android:background="@drawable/button_bg"
                style="?android:attr/borderlessButtonStyle" />
        </LinearLayout>
    </LinearLayout>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/drawerMenu"
        app:menu="@menu/drawer"
        app:headerLayout="@layout/drawer_header"
        android:layout_gravity="start"/>
</androidx.drawerlayout.widget.DrawerLayout>